# multilabel_gbm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yaml
src/: __init__.py  dataload.py  lightgbm.py  main.py
